--- a/rush.yaml
+++ b/rush.yaml
@@ -87678,6 +87678,320 @@ yugipedia_page_id: 928405
 ---
 konami_id:
 name:
+  en: Soleil the Skysavior Angel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>使<rt>し</rt></ruby> ソレイル
+  ja_romaji: Sōkyū Tenshi Soreiru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal 1 Warrior Type monster in your hand:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Lua the Skysavior Angel" this turn. Then, excavate the top 4 cards of your Deck. You can add 1 excavated "Fusion" to your hand. Place the remaining cards on the bottom of the Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 1000
+series:
+- Skysavior
+images:
+- index: 1
+  image: SoleiltheSkysaviorAngel-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP020
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 928492
+---
+konami_id:
+name:
+  en: Lua the Skysavior Angel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>使<rt>し</rt></ruby> ルーア
+  ja_romaji: Sōkyū Tenshi Rūa
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal 1 Warrior Type monster in your hand:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Soleil the Skysavior Angel" this turn. Then, send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 "Fusion" from among the cards sent to the Graveyard by this effect to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: DARK
+level: 1
+atk: 0
+def: 1000
+series:
+- Skysavior
+images:
+- index: 1
+  image: LuatheSkysaviorAngel-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP021
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 928494
+---
+konami_id:
+name:
+  en: Dunkes the Skysavior Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby> ダンクス
+  ja_romaji: Sōkyū Kishi Dankusu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal up to 5 Celestial Warrior Type monsters with different names in your Extra Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains ATK equal to [the number of monsters revealed to meet the requirement] x 200 until the end of this turn. This turn, this card cannot attack directly, and you can only attack with Celestial Warrior, Warrior, or Fairy Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WATER
+level: 4
+atk: 1300
+def: 700
+series:
+- Skysavior
+images:
+- index: 1
+  image: DunkestheSkysaviorKnight-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP025
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 928496
+---
+konami_id:
+name:
+  en: Digrace the Skysavior Radiance
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby>の<ruby>一<rt>いっ</rt></ruby><ruby>閃<rt>せん</rt></ruby> ディグレイス
+  ja_romaji: Sōkyū no Issen Digureisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Multi-Choice
+effect:
+  en: |-
+    ● This card gains ATK equal to [the number of face-up Celestial Warrior Type monsters on your field] x 1000 until the end of this turn.
+    ● This turn, this card can make up to 2 attacks on monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Celestial Warrior / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 2700
+def: 1700
+materials:
+  en: |-
+    "Dunkes the Skysavior Knight" + "Soleil the Skysavior Angel"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Skysavior
+images:
+- index: 1
+  image: DigracetheSkysaviorRadiance-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP040
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 928498
+---
+konami_id:
+name:
+  en: Drukmoor the Skysavior Phantom
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby>の<ruby>幻<rt>げん</rt></ruby><ruby>影<rt>えい</rt></ruby> ドルクムーア
+  ja_romaji: Sōkyū no Gen'ei Dorukumūa
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Face-up cards on your field cannot be destroyed by your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Celestial Warrior / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 2900
+def: 2500
+materials:
+  en: |-
+    "Dunkes the Skysavior Knight" + "Lua the Skysavior Angel"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Skysavior
+images:
+- index: 1
+  image: DrukmoortheSkysaviorPhantom-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP041
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928500
+---
+konami_id:
+name:
   en: Cyber Coatl
   de:
   es:
@@ -88562,3 +88876,174 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 929544
+---
+konami_id:
+name:
+  en: Ranga the Skysavior Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 蒼救騎士 ランガ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, reveal 1 "Skysavior Prayer" or "Fusion" in your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Soleil the Skysavior Angel" or "Lua the Skysavior Angel" from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WATER
+level: 2
+atk: 400
+def: 400
+series:
+- Skysavior
+images:
+- index: 1
+  image: RangatheSkysaviorKnight-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP022
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 929738
+---
+konami_id:
+name:
+  en: Seir the Skysavior Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 蒼救騎士 セイル
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, reveal 1 "Skysavior Prayer" or "Fusion" in your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WATER
+level: 3
+atk: 500
+def: 1300
+series:
+- Skysavior
+images:
+- index: 1
+  image: SeirtheSkysaviorKnight-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP023
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 929739
+---
+konami_id:
+name:
+  en: Ciela the Skysavior Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 蒼救騎士 シエーラ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal up to 5 Celestial Warrior Type monsters with different names in your Extra Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses ATK equal to [the number of monsters revealed to meet the requirement] x 200 until the end of this turn. This turn, you can only attack with Celestial Warrior, Warrior, or Fairy Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WATER
+level: 4
+atk: 1100
+def: 1200
+series:
+- Skysavior
+images:
+- index: 1
+  image: CielatheSkysaviorKnight-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP024
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 929741
