--- a/data/cards/yugipedia929635.yaml
+++ b/data/cards/yugipedia929635.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 愉怪な燐のきつねびゆらら
-  ja_romaji:
+  ja: <ruby>愉<rt>ゆ</rt></ruby><ruby>怪<rt>かい</rt></ruby>な<ruby>燐<rt>りん</rt></ruby>のきつねびゆらら
+  ja_romaji: Yukai na Rin no Kitsunebi Yurara
   ko:
   ko_rr:
   zh-TW:
