--- a/data/cards/yugipedia929638.yaml
+++ b/data/cards/yugipedia929638.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 百檎龍－リンゴヴルム
-  ja_romaji:
+  ja: <ruby>百檎<rt>ひゃっきん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>－リンゴヴルム
+  ja_romaji: Hyakkinryū - Ringovurumu
   ko:
   ko_rr:
   zh-TW:
