--- a/data/rush/yugipedia928496.yaml
+++ b/data/rush/yugipedia928496.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby> ダンクス
-  ja_romaji: Sōkyū Kishi Dankusu
+  ja_romaji: Sōkyūkishi Dankusu
   ko:
   ko_rr:
   zh-TW:
