--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -575,11 +575,11 @@ Warrior:
   zh-TW:
   zh-CN:
 G Golem:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: G-Golem
+  es: G Gólem
+  fr: G Golem
+  it: G Golem
+  pt: G Golem
   ja: <ruby>Ｇ<rt>ジー</rt></ruby>ゴーレム
   ja_romaji: Jī Gōremu
   ko: G골렘
@@ -1007,15 +1007,15 @@ Heraldry:
   zh-TW:
   zh-CN:
 Doll Monster:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Puppenmonster
+  es: Monstruo Muñeca
+  fr: Monstre Poupée
+  it: Mostro Bambola
+  pt: Monstro Boneca
   ja: ドール・モンスター
   ja_romaji: Dōru Monsutā
-  ko:
-  ko_rr:
+  ko: 돌 몬스터
+  ko_rr: Dol Monseuteo
   zh-TW:
   zh-CN:
 Junk:
@@ -4283,11 +4283,11 @@ Six Samurai:
   zh-TW:
   zh-CN:
 Doodle Beast:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Gekritzeltes Ungeheuer
+  es: Bestia Garabato
+  fr: Bête Gribouillage
+  it: Bestiascarabocchio
+  pt: Besta de Rabiscos
   ja: らくがきじゅう
   ja_romaji: Rakugakijū
   ko: 낙서괴물
@@ -4607,11 +4607,11 @@ Destiny HERO:
   zh-TW:
   zh-CN: 命运－英雄
 Doodlebook:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kritzelheft
+  es: Libro de Garabatos
+  fr: Livre Gribouillage
+  it: Albumscarabocchio
+  pt: Livro de Rabiscos
   ja: らくがきちょう
   ja_romaji: Rakugakichō
   ko: 낙서장
@@ -5747,11 +5747,11 @@ Silent Magician:
   zh-TW: 沉默魔術師
   zh-CN:
 Advanced Crystal Beast:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Entwickeltes Kristallungeheuer
+  es: Bestia de Cristal Avanzada
+  fr: Bête Cristalline Ultime
+  it: Bestia Cristallo Avanzata
+  pt: Fera Cristalina Avançada
   ja: <ruby>Ａ<rt>アドバンスド</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>
   ja_romaji: Adobansudo Hōgyokujū
   ko: <ruby>A<rt>어드밴스드</rt></ruby> 보옥수
