--- a/data/cards/yugipedia929642.yaml
+++ b/data/cards/yugipedia929642.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: ワナビー！
-  ja_romaji:
+  ja_romaji: Wanabī!
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    During the End Phase: You can send this card from your hand or field to the GY; excavate cards from the top of your Deck equal to the number of your opponent's unused Spell & Trap Zones, and if you do, you can Set 1 excavated Trap (but send it to the GY during the next End Phase), also place the rest on the bottom of the Deck in any order. You can only use this effect of "Wannabee!" once per turn.
+    During the End Phase: You can send this card from your hand or field to the GY; excavate cards from the top of your Deck equal to the number of your opponent's unused Spell & Trap Zones, and if you do, you can Set 1 excavated Trap (but send it to the GY during the next End Phase), also place the rest on the bottom of your Deck in any order. You can only use this effect of "Wannabee!" once per turn.
   de:
   es:
   fr:
