--- a/data/cards/yugipedia929659.yaml
+++ b/data/cards/yugipedia929659.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: トン＝トン
-  ja_romaji:
+  ja_romaji: Ton=Ton
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    Target 1 face-up monster on the field; if its current ATK, DEF, and/or Level are higher than their original values, they become their respective original values, then pay LP in multiples of 100 (max. 1000). During your Main Phase, if this card is in your GY and your LP are equal to your opponent's: You can Set this card. You can only use this effect of "Ton-Ton" once per turn.
+    Target 1 face-up monster on the field; its ATK/DEF/Level that are higher than their original ATK/DEF/Level become their original ATK/DEF/Level, then pay LP in multiples of 100 (max. 1000). During your Main Phase, if this card is in your GY and your LP are equal to your opponent's: You can Set this card. You can only use this effect of "Ton-Ton" once per turn.
   de:
   es:
   fr:
