--- a/data/rush/yugipedia928494.yaml
+++ b/data/rush/yugipedia928494.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>使<rt>し</rt></ruby> ルーア
-  ja_romaji: Sōkyū Tenshi Rūa
+  ja_romaji: Sōkyūtenshi Rūa
   ko:
   ko_rr:
   zh-TW:
