--- a/data/rush/yugipedia929738.yaml
+++ b/data/rush/yugipedia929738.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蒼救騎士 ランガ
-  ja_romaji:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby> ランガ
+  ja_romaji: Sōkyūkishi Ranga
   ko:
   ko_rr:
   zh-TW:
