--- a/data/cards/68934651.yaml
+++ b/data/cards/68934651.yaml
@@ -112,6 +112,10 @@ sets:
     - 20th Secret Rare
     - Ultimate Rare
     - Holographic Rare
+  - set_number: CYAC-JPS01
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - Prismatic Secret Rare
   ko:
   - set_number: CHIM-KR037
     set_name: Chaos Impact
