--- a/data/cards/yugipedia929194.yaml
+++ b/data/cards/yugipedia929194.yaml
@@ -38,12 +38,20 @@ series:
 - Bystial
 images:
 - index: 1
-  image: TheBystialAluber-CYAC-JP-OP.png
+  image: TheBystialAluber-CYAC-JP-SR.png
 sets:
   ja:
   - set_number: CYAC-JP008
     set_name: Cyberstorm Access
     rarities:
+    - SR
+    - ScR
+    - PScR
+  - set_number: CYAC-JP008
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - SR
+    - PScR
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
