--- a/data/cards/25551951.yaml
+++ b/data/cards/25551951.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  BlowbackDragon-17TP-JP-C.png'
-  illustration: '   BlowbackDragon-TF04-JP-VG.jpg'
+  illustration: '   BlowbackDragon-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: BlowbackDragon-SBCB-EN-C-1E.png
-  illustration: BlowbackDragon-TF04-EN-VG.jpg
+  illustration: BlowbackDragon-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN134
