--- a/data/cards/yugipedia911754.yaml
+++ b/data/cards/yugipedia911754.yaml
@@ -45,6 +45,14 @@ sets:
   - set_number: CYAC-JP048
     set_name: Cyberstorm Access
     rarities:
+    - SR
+    - ScR
+    - PScR
+  - set_number: CYAC-JP048
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - SR
+    - PScR
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
