--- a/data/cards/yugipedia916160.yaml
+++ b/data/cards/yugipedia916160.yaml
@@ -59,6 +59,11 @@ sets:
     - Super Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: CYAC-JP040
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
