--- a/data/cards/yugipedia916166.yaml
+++ b/data/cards/yugipedia916166.yaml
@@ -48,7 +48,7 @@ series:
 - Superheavy Samurai
 images:
 - index: 1
-  image: SuperheavySamuraiProdigyWakaushi-CYAC-JP-OP.png
+  image: SuperheavySamuraiProdigyWakaushi-CYAC-JP-SR.png
 sets:
   ja:
   - set_number: CYAC-JP006
@@ -56,6 +56,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: CYAC-JP006
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - Super Rare
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
