--- a/data/cards/yugipedia921232.yaml
+++ b/data/cards/yugipedia921232.yaml
@@ -44,6 +44,15 @@ sets:
   - set_number: CYAC-JP045
     set_name: Cyberstorm Access
     rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: CYAC-JP045
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
