--- a/data/cards/yugipedia921240.yaml
+++ b/data/cards/yugipedia921240.yaml
@@ -46,6 +46,14 @@ sets:
   - set_number: CYAC-JP049
     set_name: Cyberstorm Access
     rarities:
+    - SR
+    - ScR
+    - PScR
+  - set_number: CYAC-JP049
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - SR
+    - PScR
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
