--- a/data/cards/19271881.yaml
+++ b/data/cards/19271881.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18533
+password: 19271881
 name:
   en: Blazing Branded King
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：「アルバスの落胤」を融合素材とする自分フィールドの融合モンスター１体を選び、そのモンスター以外のフィールドの全ての表側表示のカードの効果をターン終了時まで無効にする。②：このターンに融合モンスターが自分の墓地へ送られている場合、エンドフェイズに発動できる。墓地のこのカードを手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -31,13 +32,14 @@ series:
 - Branded
 images:
 - index: 1
-  image: BlazingBrandedKing-CYAC-JP-OP.png
+  image: BlazingBrandedKing-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP070
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 928502
