--- a/data/cards/43331750.yaml
+++ b/data/cards/43331750.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18540
+password: 43331750
 name:
   en: Fusion Reproduction
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分または相手の墓地の、「融合」通常・速攻魔法カードまたは「フュージョン」通常・速攻魔法カード１枚を対象として発動できる。その魔法カードを除外し、その魔法カードの発動時の効果を適用する。
   ko:
   zh-TW:
   zh-CN:
@@ -31,13 +32,14 @@ series:
 - Fusion
 images:
 - index: 1
-  image: FusionReproduction-CYAC-JP-OP.png
+  image: FusionReproduction-CYAC-JP-R.png
 sets:
   ja:
   - set_number: CYAC-JP077
     set_name: Cyberstorm Access
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 928777
