--- a/data/cards/44553392.yaml
+++ b/data/cards/44553392.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18537
+password: 44553392
 name:
   en: World of Boundless Consciousness
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：フィールドに「ヴィシャス＝アストラウド」が存在する場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。その後、破壊したカードの元々のカード名が「ヴィシャス＝アストラウド」だった場合、除外されている自分の「ヴィサス＝スタフロスト」１体を選んで特殊召喚できる。「ヴィシャス＝アストラウド」以外だった場合、自分フィールドの「ヴィシャス＝アストラウド」１体を選び、その攻撃力を１５００アップできる。
   ko:
   zh-TW:
   zh-CN:
@@ -29,13 +30,14 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: WorldofBoundlessConsciousness-CYAC-JP-OP.png
+  image: WorldofBoundlessConsciousness-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP074
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 924250
