--- a/data/cards/71164684.yaml
+++ b/data/cards/71164684.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18535
+password: 71164684
 name:
   en: Manadome Breakheart
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の、チューナーまたはＳモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果で光属性モンスターを特殊召喚した場合、さらにその攻撃力以下の攻撃力を持つ相手フィールドのモンスター１体を選んで破壊できる。②：自分フィールドの、「ヴィサス＝スタフロスト」または攻撃力１５００／守備力２１００のモンスターが戦闘・効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko:
   zh-TW:
   zh-CN:
@@ -31,13 +32,14 @@ series:
 - Manadome
 images:
 - index: 1
-  image: ManadomeBreakheart-CYAC-JP-OP.png
+  image: ManadomeBreakheart-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP072
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 917175
