--- a/data/cards/71948047.yaml
+++ b/data/cards/71948047.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18538
+password: 71948047
 name:
   en: REINFORCE!
   de:
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名はルール上「Ｒ－ＡＣＥ」カードとしても扱う。このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドの「Ｒ－ＡＣＥ」モンスター１体を対象として発動できる。その自分のモンスターはこのターン、攻撃力・守備力が１５００アップし、相手モンスターの効果を受けず、１度だけ戦闘では破壊されない。②：墓地のこのカードを除外し、自分の墓地の「Ｒ－ＡＣＥ」魔法カード１枚を対象として発動できる。そのカードを自分フィールドにセットする。
   ko:
   zh-TW:
   zh-CN:
@@ -32,13 +33,14 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: REINFORCE-CYAC-JP-OP.png
+  image: REINFORCE-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP075
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 917932
