--- a/data/cards/82886276.yaml
+++ b/data/cards/82886276.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18532
+password: 82886276
 name:
   en: Cynet Circuit
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの「ファイアウォール」リンクモンスター１体を対象として発動できる。自分の墓地からモンスターを任意の数だけ選び、対象のモンスターとリンク状態になるように自分または相手フィールドに特殊召喚する。②：自分のＬＰが２０００以下の場合、墓地のこのカードを除外して発動できる。自分の墓地から「ファイアウォール」リンクモンスター１体を選んでＥＸデッキに戻す。その後、そのモンスターをＥＸデッキから特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -31,13 +32,14 @@ series:
 - Cynet
 images:
 - index: 1
-  image: CynetCircuit-CYAC-JP-OP.png
+  image: CynetCircuit-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP069
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 911757
