--- a/data/cards/84121302.yaml
+++ b/data/cards/84121302.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18526
+password: 84121302
 name:
   en: Libromancer Origin
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できず、このカード名の③の効果は１ターンに１度しか使用できない。①：このカードの発動時の効果処理として、デッキから「リブロマンサー・オリジン」以外の「リブロマンサー」魔法・罠カード１枚を選んで自分フィールドにセットできる。②：自分フィールドの「リブロマンサー」儀式モンスターの攻撃力は自身のレベル×１００アップする。③：自分フィールドに儀式モンスターが儀式召喚された場合、相手フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -31,13 +32,14 @@ series:
 - Libromancer
 images:
 - index: 1
-  image: LibromancerOrigin-CYAC-JP-OP.png
+  image: LibromancerOrigin-CYAC-JP-R.png
 sets:
   ja:
   - set_number: CYAC-JP063
     set_name: Cyberstorm Access
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 921986
