--- a/data/cards/06214163.yaml
+++ b/data/cards/06214163.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18542
+password: 6214163
 name:
   en: Double Hooking
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：手札を１枚捨て、自分の墓地のモンスターを２体まで対象としてこのカードを発動できる。そのモンスターを特殊召喚する。対象のモンスターがフィールドから離れた時にこのカードは破壊される。このカードがフィールドから離れた時に対象のモンスターは破壊される。
   ko:
   zh-TW:
   zh-CN:
@@ -29,13 +30,14 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: DoubleHooking-CYAC-JP-OP.png
+  image: DoubleHooking-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP079
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 928709
