--- a/data/cards/43618262.yaml
+++ b/data/cards/43618262.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18543
+password: 43618262
 name:
   en: First Purchase of the Year
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：相手のデッキの上からカードを５枚めくり、自分はその中から１枚を選んで１００の倍数の数を宣言する（最大３０００まで）。相手はその数値分のＬＰを回復できる。回復した場合、自分はその数値分のＬＰを失い、選んだカードを自分の手札に加え、残りのカードを元の順番でデッキの上に戻す。回復しなかった場合、めくったカードを元の順番でデッキの上に戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -29,13 +30,14 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: FirstPurchaseoftheYear-CYAC-JP-OP.png
+  image: FirstPurchaseoftheYear-CYAC-JP-NR.png
 sets:
   ja:
   - set_number: CYAC-JP080
     set_name: Cyberstorm Access
     rarities:
+    - Normal Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 928422
