--- a/data/cards/46497537.yaml
+++ b/data/cards/46497537.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18531
+password: 46497537
 name:
   en: Ton-Ton
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の②の効果は１ターンに１度しか使用できない。①：フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの攻撃力・守備力・レベルの内、元々の数値より高い数値は、元々の数値になる。その後、１００の倍数のＬＰを払う（最大１０００まで）。②：このカードが墓地に存在し、自分のＬＰが相手と同じ場合、自分メインフェイズに発動できる。このカードを自分フィールドにセットする。
   ko:
   zh-TW:
   zh-CN:
@@ -38,5 +39,5 @@ sets:
     - Normal Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 929659
