--- a/data/cards/42822433.yaml
+++ b/data/cards/42822433.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Constellar" card.)
-    If this card is Summoned: You can target cards on the field up to the number of LIGHT and DARK Xyz Monsters you control; destroy them. If a "tellarknight" and/or "Constellar" monster(s) other than "Tellarknight Altea" is Special Summoned to your field: You can Special Summon this card from your GY, also you cannot declare an attack for the rest of this turn, except with Xyz Monsters. You can only use each effect of "Tellarknight Altea" once per turn.
+    If this card is Summoned: You can target cards on the field up to the number of LIGHT and DARK Xyz Monsters you control; destroy them. If a "tellarknight" and/or "Constellar" monster(s) other than "Tellarknight Altea" is Special Summoned to your field (except during the Damage Step): You can Special Summon this card from your GY, also you cannot declare an attack for the rest of this turn, except with Xyz Monsters. You can only use each effect of "Tellarknight Altea" once per turn.
   de:
   es:
   fr:
