--- a/data/cards/53971455.yaml
+++ b/data/cards/53971455.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Level 4 Tuner + 1+ non-Tuner monsters
-    Once per turn, if a card(s) leaves either Extra Deck: You can make all face-up monsters you currently control gain 500 ATK, then you can negate the effects of 1 face-up card on the field until the end of this turn. During the End Phase, if this card is in the GY because it was sent there this turn: You can Special Summon 1 LIGHT Spellcaster monster whose ATK equals its own DEF from your hand or Deck. You can only use this effect of "Despian Luluwalilith" once per turn.
+    Once per turn, if a card(s) leaves either Extra Deck (except during the Damage Step): You can make all face-up monsters you currently control gain 500 ATK, then you can negate the effects of 1 face-up card on the field until the end of this turn. During the End Phase, if this card is in the GY because it was sent there this turn: You can Special Summon 1 LIGHT Spellcaster monster whose ATK equals its own DEF from your hand or Deck. You can only use this effect of "Despian Luluwalilith" once per turn.
   de:
   es:
   fr:
