--- a/data/cards/56510115.yaml
+++ b/data/cards/56510115.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     Apply these effects, in sequence, based on the number of face-up "Solfachord" Pendulum Monsters with different names in your Extra Deck.
-    ● 3+: All "Solfachord" Pendulum Monsters you currently control gain ATK equal to their own Pendulum Scale x 300 until the end of this turn.
+    ● 3+: All "Solfachord" Pendulum Monsters you control gain ATK equal to their own Pendulum Scale x 300 this turn.
     ● 5+: You can destroy 1 card your opponent controls, then, if you have a card with an odd Pendulum Scale in your Pendulum Zone, draw 1 card.
     ● 7+: You can Special Summon 1 "GranSolfachord" monster from your Extra Deck.
     You can only activate 1 "Solfachord Symphonia" per turn.
