--- a/data/cards/56787189.yaml
+++ b/data/cards/56787189.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If your opponent Special Summons a Ritual, Fusion, Synchro, Xyz, or Link Monster(s): You can activate 1 of these effects (but you can only use each effect of "The Boundless Open Land" once per turn);
+    If your opponent Special Summons a Ritual, Fusion, Synchro, Xyz, or Link Monster(s) (except during the Damage Step): You can activate 1 of these effects (but you can only use each effect of "The Boundless Open Land" once per turn);
     ● Add 1 "Fallen of Albaz", or 1 monster that mentions it, from your Deck to your hand.
     ● Special Summon 1 "Fallen of Albaz", or 1 monster that mentions it, from your hand.
   de:
