--- a/data/cards/64193046.yaml
+++ b/data/cards/64193046.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. If a "Superheavy Samurai" monster(s) you control would be destroyed by battle or card effect, you can destroy 1 "Superheavy Samurai" card you control instead. Once per turn, if your opponent activates a Spell/Trap Card or effect: You can draw until you have 3 cards in your hand.
+    This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. If a "Superheavy Samurai" monster(s) you control would be destroyed by battle or card effect, you can destroy 1 "Superheavy Samurai" card you control instead. Once per turn, if your opponent activates a Spell/Trap Card or effect (except during the Damage Step): You can draw until you have 3 cards in your hand.
   de:
   es:
   fr:
