--- a/data/cards/84121302.yaml
+++ b/data/cards/84121302.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can Set 1 "Libromancer" Spell/Trap directly from your Deck, except "Libromancer Origin". "Libromancer" Ritual Monsters you control gain ATK equal to their own Level x 100. If a Ritual Monster(s) is Ritual Summoned to your field: You can target 1 Spell/Trap your opponent controls; destroy it. You can only use this effect of "Libromancer Origin" once per turn. You can only activate 1 "Libromancer Origin" per turn.
+    When this card is activated: You can Set 1 "Libromancer" Spell/Trap directly from your Deck, except "Libromancer Origin". "Libromancer" Ritual Monsters you control gain ATK equal to their own Level x 100. If a Ritual Monster(s) is Ritual Summoned to your field (except during the Damage Step): You can target 1 Spell/Trap your opponent controls; destroy it. You can only use this effect of "Libromancer Origin" once per turn. You can only activate 1 "Libromancer Origin" per turn.
   de:
   es:
   fr:
