--- a/data/cards/91300233.yaml
+++ b/data/cards/91300233.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 "Beetrooper" monster + 1 Insect monster
-    You cannot Special Summon monsters, except Insect monsters. You can only use each of the following effects of "Beetrooper Cruel Saturn" once per turn. If this card is Special Summoned: You can add 1 "Beetrooper" card from your Deck to your hand. If an Insect monster(s) is banished face-up: You can target 1 of your banished "Beetrooper" monsters; Special Summon it.
+    You cannot Special Summon monsters, except Insect monsters. You can only use each of the following effects of "Beetrooper Cruel Saturn" once per turn. If this card is Special Summoned: You can add 1 "Beetrooper" card from your Deck to your hand. If an Insect monster(s) is banished face-up (except during the Damage Step): You can target 1 of your banished "Beetrooper" monsters; Special Summon it.
   de:
   es:
   fr:
