--- a/data/cards/43973174.yaml
+++ b/data/cards/43973174.yaml
@@ -8,7 +8,7 @@ name:
   it: Flauto Evoca-Draghi
   pt: A Flauta para Invocação de Dragões
   ja: ドラゴンを<ruby>呼<rt>よ</rt></ruby>ぶ<ruby>笛<rt>ふえ</rt></ruby>
-  ja_romaji: Doragon wo Yobu Fue
+  ja_romaji: Doragon o Yobu Fue
   ko: 드래곤을 부르는 피리
   ko_rr:
   zh-TW: 喚龍笛
