--- a/data/cards/36304921.yaml
+++ b/data/cards/36304921.yaml
@@ -8,7 +8,7 @@ name:
   it: Spettro Oscuro
   pt: Fantasma Sarcástico
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>人<rt>じん</rt></ruby>デスサタン
-  ja_romaji: Majin Desu-Satan
+  ja_romaji: Majin Desu Satan
   ko: 데스 사탄
   ko_rr:
   zh-TW:
