--- a/data/cards/39643167.yaml
+++ b/data/cards/39643167.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: ウサミミ<ruby>導<rt>どう</rt></ruby><ruby>師<rt>し</rt></ruby>
-  ja_romaji: Usamimi-dōshi
+  ja_romaji: Usamimi Dōshi
   ko:
   ko_rr:
   zh-TW:
