--- a/data/cards/60102563.yaml
+++ b/data/cards/60102563.yaml
@@ -45,7 +45,7 @@ images:
   illustration: '   MajiGirePanda-MADU-JP-VG-artwork.png'
 - index: '1.1'
   image: MajiGirePanda-DR3-EN-C-UE.png
-  illustration: MajiGirePanda-TF04-EN-VG.jpg
+  illustration: MajiGirePanda-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: FET-EN012
