--- a/data/cards/73134081.yaml
+++ b/data/cards/73134081.yaml
@@ -38,10 +38,10 @@ property: Normal
 images:
 - index: 1
   image: FinalFlame-DL2-JP-C.jpg
-  illustration: '   FinalFlame-TF04-JP-VG.jpg'
+  illustration: '   FinalFlame-TF05-JP-VG-artwork.png'
 - index: 2
   image: FinalFlame-LOB-EN-R-UE.jpg
-  illustration: FinalFlame-TF04-EN-VG.jpg
+  illustration: FinalFlame-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: LOB-EN100
