--- a/rush.yaml
+++ b/rush.yaml
@@ -89409,3 +89409,60 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 929761
+---
+konami_id:
+name:
+  en: Voidvelgr Black Dwarf
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・ブラックドワーフ
+  ja_romaji: Voidoverugu Burakku Dowāfu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 4 DARK Attribute Galaxy Type Normal Monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: DARK
+level: 5
+atk: 1500
+def: 0
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrBlackDwarf-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP009
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 929875
