--- a/data/cards/23401839.yaml
+++ b/data/cards/23401839.yaml
@@ -42,10 +42,10 @@ def: 1000
 images:
 - index: 1
   image: '  SenjuoftheThousandHands-AT11-JP-NPR.png'
-  illustration: ' SenjuoftheThousandHands-TF04-JP-VG.jpg'
+  illustration: ' SenjuoftheThousandHands-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: SenjuoftheThousandHands-SGX1-EN-C-1E.png
-  illustration: SenjuoftheThousandHands-TF04-EN-VG.jpg
+  illustration: SenjuoftheThousandHands-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN046
