--- a/data/cards/27618634.yaml
+++ b/data/cards/27618634.yaml
@@ -42,10 +42,10 @@ def: 300
 images:
 - index: 1
   image: '  TheUnhappyGirl-EE2-JP-C.jpg'
-  illustration: '   TheUnhappyGirl-TF04-JP-VG.jpg'
+  illustration: '   TheUnhappyGirl-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: TheUnhappyGirl-DR2-EN-C-UE.png
-  illustration: TheUnhappyGirl-TF04-EN-VG.png
+  illustration: TheUnhappyGirl-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN122
