--- a/data/cards/03117804.yaml
+++ b/data/cards/03117804.yaml
@@ -8,7 +8,7 @@ name:
   it: Samurai Superpesante Grande Benkei
   pt: Samurai Superpesado Grande Benkei
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>武<rt>む</rt></ruby><ruby>者<rt>しゃ</rt></ruby>ビッグベン－<ruby>Ｋ<rt>ケー</rt></ruby>
-  ja_romaji: Chōjūmusha Bigguben-Kē
+  ja_romaji: Chōjūmusha Biggu Ben-Kē
   ko: 초중무사 빅벤－<ruby>K<rt>케이</rt></ruby>
   ko_rr:
   zh-TW:
