--- a/data/rush/17028.yaml
+++ b/data/rush/17028.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 300 damage to your opponent. Then, you can Special Summon up to 2 "Reportrain" from your Graveyard face-up to your field.
+    Inflict 300 damage to your opponent. Then, you can Special Summon up to 2 "ExPress Train" from your Graveyard face-up to your field.
   de:
   es:
   fr:
