--- a/data/rush/17200.yaml
+++ b/data/rush/17200.yaml
@@ -51,7 +51,7 @@ atk: 2500
 def: 3000
 materials:
   en: |-
-    "Kimeluna the Dark Shifter" + "Valkyrian Sewkyrie"
+    "Kimeluna the Dark Shifter" + "Needlkyrie the Celestial Seamstress"
   de:
   es:
   fr:
