--- a/data/rush/17312.yaml
+++ b/data/rush/17312.yaml
@@ -51,7 +51,7 @@ atk: 3000
 def: 3000
 materials:
   en: |-
-    "Semeruler the Dark Summoner" + "Valkyrian Sewkyrie"
+    "Semeruler the Dark Summoner" + "Needlkyrie the Celestial Seamstress"
   de:
   es:
   fr:
