--- a/data/rush/16967.yaml
+++ b/data/rush/16967.yaml
@@ -1,6 +1,6 @@
 konami_id: 16967
 name:
-  en: Valkyrian Sewkyrie
+  en: Needlkyrie the Celestial Seamstress
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: ValkyrianSewkyrie-RDGRC1-JP-SR.png
+  image: NeedlkyrietheCelestialSeamstress-RDGRC1-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP001
