--- a/data/rush/16973.yaml
+++ b/data/rush/16973.yaml
@@ -1,6 +1,6 @@
 konami_id: 16973
 name:
-  en: Reportrain
+  en: ExPress Train
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: Reportrain-RDSD02-JP-C.png
+  image: ExPressTrain-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP007
