--- a/data/rush/16979.yaml
+++ b/data/rush/16979.yaml
@@ -1,13 +1,13 @@
 konami_id: 16979
 name:
-  en: Mountain Storm Dragon
+  en: Porcupine Dragon
   de:
   es:
   fr:
   it:
   pt:
   ja: <ruby>山<rt>やま</rt></ruby><ruby>嵐<rt>あらし</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>
-  ja_romaji: Yama-arashiryū
+  ja_romaji: Yama'arashiryū
   ko: 산람룡
   ko_rr:
   zh-TW:
@@ -48,7 +48,7 @@ atk: 1600
 def: 1600
 images:
 - index: 1
-  image: MountainStormDragon-RDSD03-JP-C.png
+  image: PorcupineDragon-RDSD03-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP013
