--- a/data/rush/16980.yaml
+++ b/data/rush/16980.yaml
@@ -1,6 +1,6 @@
 konami_id: 16980
 name:
-  en: Psyphickupper
+  en: Psypickupper
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: Psyphickupper-RDKP07-JP-R.png
+  image: Psypickupper-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP014
