--- a/data/rush/16981.yaml
+++ b/data/rush/16981.yaml
@@ -1,6 +1,6 @@
 konami_id: 16981
 name:
-  en: Mezame the August Awakener
+  en: Mezame the Ringing Alarm
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 0
 def: 200
 images:
 - index: 1
-  image: MezametheAugustAwakener-RDKP07-JP-SR.png
+  image: MezametheRingingAlarm-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP015
