--- a/data/rush/16985.yaml
+++ b/data/rush/16985.yaml
@@ -1,6 +1,6 @@
 konami_id: 16985
 name:
-  en: Viskam Nanotron
+  en: Viscom Nanotron
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: ViskamNanotron-RDKP07-JP-C.png
+  image: ViscomNanotron-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP019
