--- a/data/rush/16986.yaml
+++ b/data/rush/16986.yaml
@@ -1,6 +1,6 @@
 konami_id: 16986
 name:
-  en: Constructor Heavenly Wyrm Gantry Dragon
+  en: Constructor Sky Wyrm Gantry Dragon
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorHeavenlyWyrmGantryDragon-RDKP07-JP-UR.png
+  image: ConstructorSkyWyrmGantryDragon-RDKP07-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP07-JP020
