--- a/data/rush/16995.yaml
+++ b/data/rush/16995.yaml
@@ -1,6 +1,6 @@
 konami_id: 16995
 name:
-  en: Reporter Raccoon Miketan
+  en: Reporter Raccoon
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: ReporterRaccoonMiketan-RDKP07-JP-C.png
+  image: ReporterRaccoon-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP029
