--- a/data/rush/17002.yaml
+++ b/data/rush/17002.yaml
@@ -1,6 +1,6 @@
 konami_id: 17002
 name:
-  en: Yamiterasu the Divine Delayer
+  en: Yamiterasu the Divine Ruler
   de:
   es:
   fr:
@@ -51,7 +51,7 @@ atk: 3000
 def: 3000
 materials:
   en: |-
-    "Yamiruler the Dark Delayer" + "Valkyrian Sewkyrie"
+    "Yamiruler the Dark Delayer" + "Needlkyrie the Celestial Seamstress"
   de:
   es:
   fr:
@@ -67,7 +67,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: YamiterasutheDivineDelayer-RDKP07-JP-UR.png
+  image: YamiterasutheDivineRuler-RDKP07-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP07-JP036
