--- a/data/rush/17003.yaml
+++ b/data/rush/17003.yaml
@@ -1,6 +1,6 @@
 konami_id: 17003
 name:
-  en: Lightning Speed, the Rumbling Report Warship
+  en: Newsflash the Journalistic Juggernaut
   de:
   es:
   fr:
@@ -64,7 +64,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: LightningSpeedtheRumblingReportWarship-RDKP07-JP-SR.png
+  image: NewsflashtheJournalisticJuggernaut-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP037
