--- a/rush.yaml
+++ b/rush.yaml
@@ -46392,7 +46392,7 @@ yugipedia_page_id: 831709
 ---
 konami_id: 16967
 name:
-  en: Valkyrian Sewkyrie
+  en: Needlkyrie the Celestial Seamstress
   de:
   es:
   fr:
@@ -46426,7 +46426,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: ValkyrianSewkyrie-RDGRC1-JP-SR.png
+  image: NeedlkyrietheCelestialSeamstress-RDGRC1-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP001
@@ -46704,7 +46704,7 @@ yugipedia_page_id: 829610
 ---
 konami_id: 16973
 name:
-  en: Reportrain
+  en: ExPress Train
   de:
   es:
   fr:
@@ -46740,7 +46740,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: Reportrain-RDSD02-JP-C.png
+  image: ExPressTrain-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP007
@@ -47060,14 +47060,14 @@ yugipedia_page_id: 835775
 ---
 konami_id: 16979
 name:
-  en: Mountain Storm Dragon
+  en: Porcupine Dragon
   de:
   es:
   fr:
   it:
   pt:
   ja: <ruby>山<rt>やま</rt></ruby><ruby>嵐<rt>あらし</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>
-  ja_romaji: Yama-arashiryū
+  ja_romaji: Yama'arashiryū
   ko: 산람룡
   ko_rr:
   zh-TW:
@@ -47108,7 +47108,7 @@ atk: 1600
 def: 1600
 images:
 - index: 1
-  image: MountainStormDragon-RDSD03-JP-C.png
+  image: PorcupineDragon-RDSD03-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP013
@@ -47132,7 +47132,7 @@ yugipedia_page_id: 833080
 ---
 konami_id: 16980
 name:
-  en: Psyphickupper
+  en: Psypickupper
   de:
   es:
   fr:
@@ -47182,7 +47182,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: Psyphickupper-RDKP07-JP-R.png
+  image: Psypickupper-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP014
@@ -47198,7 +47198,7 @@ yugipedia_page_id: 831722
 ---
 konami_id: 16981
 name:
-  en: Mezame the August Awakener
+  en: Mezame the Ringing Alarm
   de:
   es:
   fr:
@@ -47246,7 +47246,7 @@ atk: 0
 def: 200
 images:
 - index: 1
-  image: MezametheAugustAwakener-RDKP07-JP-SR.png
+  image: MezametheRingingAlarm-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP015
@@ -47464,7 +47464,7 @@ yugipedia_page_id: 835776
 ---
 konami_id: 16985
 name:
-  en: Viskam Nanotron
+  en: Viscom Nanotron
   de:
   es:
   fr:
@@ -47514,7 +47514,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: ViskamNanotron-RDKP07-JP-C.png
+  image: ViscomNanotron-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP019
@@ -47530,7 +47530,7 @@ yugipedia_page_id: 829430
 ---
 konami_id: 16986
 name:
-  en: Constructor Heavenly Wyrm Gantry Dragon
+  en: Constructor Sky Wyrm Gantry Dragon
   de:
   es:
   fr:
@@ -47580,7 +47580,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorHeavenlyWyrmGantryDragon-RDKP07-JP-UR.png
+  image: ConstructorSkyWyrmGantryDragon-RDKP07-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP07-JP020
@@ -48056,7 +48056,7 @@ yugipedia_page_id: 829592
 ---
 konami_id: 16994
 name:
-  en: 'Player #99: Homefield Dragon'
+  en: 'Player #99: Grand Slam Dragon'
   de:
   es:
   fr:
@@ -48106,7 +48106,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: Player99HomefieldDragon-RDKP07-JP-SR.png
+  image: Player99GrandSlamDragon-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP027
@@ -48122,7 +48122,7 @@ yugipedia_page_id: 829593
 ---
 konami_id: 16995
 name:
-  en: Reporter Raccoon Miketan
+  en: Reporter Raccoon
   de:
   es:
   fr:
@@ -48172,7 +48172,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: ReporterRaccoonMiketan-RDKP07-JP-C.png
+  image: ReporterRaccoon-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP029
@@ -48592,7 +48592,7 @@ atk: 2800
 def: 2400
 materials:
   en: |-
-    "CAN:D" + "Psyphickupper"
+    "CAN:D" + "Psypickupper"
   de:
   es:
   fr:
@@ -48636,7 +48636,7 @@ yugipedia_page_id: 831723
 ---
 konami_id: 17002
 name:
-  en: Yamiterasu the Divine Delayer
+  en: Yamiterasu the Divine Ruler
   de:
   es:
   fr:
@@ -48687,7 +48687,7 @@ atk: 3000
 def: 3000
 materials:
   en: |-
-    "Yamiruler the Dark Delayer" + "Valkyrian Sewkyrie"
+    "Yamiruler the Dark Delayer" + "Needlkyrie the Celestial Seamstress"
   de:
   es:
   fr:
@@ -48703,7 +48703,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: YamiterasutheDivineDelayer-RDKP07-JP-UR.png
+  image: YamiterasutheDivineRuler-RDKP07-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP07-JP036
@@ -48721,7 +48721,7 @@ yugipedia_page_id: 831718
 ---
 konami_id: 17003
 name:
-  en: Lightning Speed, the Rumbling Report Warship
+  en: Newsflash the Journalistic Juggernaut
   de:
   es:
   fr:
@@ -48785,7 +48785,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: LightningSpeedtheRumblingReportWarship-RDKP07-JP-SR.png
+  image: NewsflashtheJournalisticJuggernaut-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP037
@@ -50187,7 +50187,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. Then, if you Special Summoned "Player #39: Home Run Hitter" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" by this effect, you can destroy 1 monster on your opponent's field.
+    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. Then, if you Special Summoned "Player #39: Home Run Hitter" or "Player #99: Grand Slam Dragon" by this effect, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
@@ -50249,7 +50249,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Gain 900 LP. Then, if you have 9 or more FIRE Attribute monsters in your Graveyard, you can Special Summon 1 "Player #39: Home Run Hitter" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" from your Graveyard face-up to your field.
+    Gain 900 LP. Then, if you have 9 or more FIRE Attribute monsters in your Graveyard, you can Special Summon 1 "Player #39: Home Run Hitter" or "Player #99: Grand Slam Dragon" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -50381,7 +50381,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 300 damage to your opponent. Then, you can Special Summon up to 2 "Reportrain" from your Graveyard face-up to your field.
+    Inflict 300 damage to your opponent. Then, you can Special Summon up to 2 "ExPress Train" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -51015,7 +51015,7 @@ atk: 2500
 def: 3000
 materials:
   en: |-
-    "Kimeluna the Dark Shifter" + "Valkyrian Sewkyrie"
+    "Kimeluna the Dark Shifter" + "Needlkyrie the Celestial Seamstress"
   de:
   es:
   fr:
@@ -55519,7 +55519,7 @@ atk: 3000
 def: 3000
 materials:
   en: |-
-    "Semeruler the Dark Summoner" + "Valkyrian Sewkyrie"
+    "Semeruler the Dark Summoner" + "Needlkyrie the Celestial Seamstress"
   de:
   es:
   fr:
