--- a/data/cards/30241314.yaml
+++ b/data/cards/30241314.yaml
@@ -39,10 +39,10 @@ property: Continuous
 images:
 - index: 1
   image: '  MacroCosmos-RC02-JP-ScR.png'
-  illustration: '    MacroCosmos-TF04-JP-VG.jpg'
+  illustration: '    MacroCosmos-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: MacroCosmos-DT06-EN-DRPR-DT.jpg
-  illustration: MacroCosmos-TF04-EN-VG.jpg
+  illustration: MacroCosmos-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: EOJ-EN057
