--- a/data/cards/80045583.yaml
+++ b/data/cards/80045583.yaml
@@ -43,10 +43,10 @@ series:
 images:
 - index: 1
   image: '  AncientGearCannon-EE04-JP-C.jpg'
-  illustration: '   AncientGearCannon-TF04-JP-VG.jpg'
+  illustration: '   AncientGearCannon-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: AncientGearCannon-SD10-EN-C-UE.png
-  illustration: AncientGearCannon-TF04-EN-VG.jpg
+  illustration: AncientGearCannon-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: SOI-EN009
