--- a/data/cards/92001300.yaml
+++ b/data/cards/92001300.yaml
@@ -40,10 +40,10 @@ series:
 images:
 - index: 1
   image: '  AncientGearCastle-SR03-JP-C.png'
-  illustration: '   AncientGearCastle-TF04-JP-VG.jpg'
+  illustration: '   AncientGearCastle-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: AncientGearCastle-SGX1-EN-C-1E.png
-  illustration: AncientGearCastle-TF04-EN-VG.jpg
+  illustration: AncientGearCastle-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: SOI-EN047
