--- a/data/cards/68075840.yaml
+++ b/data/cards/68075840.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18659
+password: 68075840
 name:
   en: Power Pro Knight Girls
   de:
@@ -26,7 +26,12 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    パワプロ界のナビゲーター三人娘。
+    （左）明るく元気で責任感が強いけど、忘れっぽいのが玉に瑕の「パーちゃん」。
+    （右）おしとやかで真面目＆冷静だが、時たま暴走する事もある「ワーちゃん」。
+    （中）鞄がトレードマークで二人の大先輩である「なみき」とその愛犬の「ちくわ」。
+    彼女達に導かれるかの如く踏み入れた球場の中、ついに運命にたどり着く。そして球児達は大きな一歩を踏み出すのだ。――これは全ての始まりであり、大いなる球史である。
   ko:
   zh-TW:
   zh-CN:
@@ -38,13 +43,15 @@ atk: 1200
 def: 2400
 images:
 - index: 1
-  image: PowerProKnightGirls-PPC2-JP-OP.png
+  image: PowerProKnightGirls-PPC2-JP-C.png
 sets:
   ja:
   - set_number: PPC2-JP002
     set_name: Yu-Gi-Oh! Duel Monsters x Power Pros Collaboration commemorative cards 2
     rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 929429
