--- a/data/cards/03361010.yaml
+++ b/data/cards/03361010.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    All face-up monsters on the field become FIRE. If this card is in your GY and your opponent has a FIRE monster on their field or in their GY: You can Special Summon this card. You can only use this effect of "Fox-o'-Wisps" once per turn.
+    All face-up monsters on the field become FIRE. If this card is in your GY and your opponent has a FIRE monster on their field or in their GY: You can Special Summon this card. You can only use this effect of "Yukai na Rin no Kitsunebi Yurara" once per turn.
   de:
   es:
   fr:
