--- a/data/rush/17700.yaml
+++ b/data/rush/17700.yaml
@@ -1,6 +1,6 @@
 konami_id: 17700
 name:
-  en: Cyber-Stein Shrine
+  en: Cyber-Stein Frankenshrine
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2500
 def: 0
 images:
 - index: 1
-  image: CyberSteinShrine-RDMRP1-JP-R.png
+  image: CyberSteinFrankenshrine-RDMRP1-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP1-JP074
