--- a/data/rush/17953.yaml
+++ b/data/rush/17953.yaml
@@ -1,6 +1,6 @@
 konami_id: 17953
 name:
-  en: Dragon Surpassing the Heavenly Heights
+  en: Dragon's Peak
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DragonSurpassingtheHeavenlyHeights-RDSD03-JP-C.png
+  image: DragonsPeak-RDSD03-JP-C.png
 sets:
   ja:
   - set_number: RD/SD03-JP029
