--- a/rush.yaml
+++ b/rush.yaml
@@ -67041,7 +67041,7 @@ yugipedia_page_id: 881646
 ---
 konami_id: 17700
 name:
-  en: Cyber-Stein Shrine
+  en: Cyber-Stein Frankenshrine
   de:
   es:
   fr:
@@ -67089,7 +67089,7 @@ atk: 2500
 def: 0
 images:
 - index: 1
-  image: CyberSteinShrine-RDMRP1-JP-R.png
+  image: CyberSteinFrankenshrine-RDMRP1-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP1-JP074
@@ -67555,7 +67555,7 @@ yugipedia_page_id: 881635
 ---
 konami_id: 17709
 name:
-  en: Surprising Zombie Victory
+  en: Surprising Zomvictory
   de:
   es:
   fr:
@@ -67599,7 +67599,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SurprisingZombieVictory-RDMRP1-JP-C.png
+  image: SurprisingZomvictory-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP083
@@ -74967,7 +74967,7 @@ yugipedia_page_id: 892768
 ---
 konami_id: 17953
 name:
-  en: Dragon Surpassing the Heavenly Heights
+  en: Dragon's Peak
   de:
   es:
   fr:
@@ -75011,7 +75011,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DragonSurpassingtheHeavenlyHeights-RDSD03-JP-C.png
+  image: DragonsPeak-RDSD03-JP-C.png
 sets:
   ja:
   - set_number: RD/SD03-JP029
