--- a/data/cards/16310544.yaml
+++ b/data/cards/16310544.yaml
@@ -53,7 +53,9 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoKagura-DBAD-JP-C.png
+  image: '  MikankoKagura-DBAD-JP-C.png'
+- index: '1.1'
+  image: MikankoKagura-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN034
