--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: OneforOne-SDSA-EN-C-1E.png
+  image: OneforOne-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: RGBT-EN045
