--- a/data/cards/14602126.yaml
+++ b/data/cards/14602126.yaml
@@ -40,7 +40,7 @@ series:
 - Xyz
 images:
 - index: 1
-  image: XyzImport-MP21-EN-SR-1E.png
+  image: XyzImport-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: DLCS-EN145
