--- a/data/cards/27068117.yaml
+++ b/data/cards/27068117.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 叠光再生
 text:
   en: |-
-    Target 1 face-up Xyz Monster on the field; attach this card to it as an Xyz Material.
+    Target 1 face-up Xyz Monster on the field; attach this card to it as material.
   de: |-
     Wähle 1 offenes Xyz-Monster auf dem Spielfeld; hänge diese Karte als Xyz-Material daran an.
   es: |-
@@ -39,7 +39,7 @@ series:
 - Overlay
 images:
 - index: 1
-  image: OverlayRegen-REDU-EN-C-1E.png
+  image: OverlayRegen-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: REDU-EN052
