--- a/data/cards/32086564.yaml
+++ b/data/cards/32086564.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: XYZ纷争对手
 text:
   en: |-
-    Face-up Xyz Monsters on the field with 2 or more Xyz Materials cannot be destroyed by card effects. After damage calculation, if an Xyz Monster you control battles an opponent's monster: Destroy that opponent's monster. That Xyz Monster must have 2 or more Xyz Materials attached to activate and to resolve this effect.
+    Face-up Xyz Monsters on the field with 2 or more materials cannot be destroyed by card effects. After damage calculation, if your Xyz Monster battled an opponent's monster while this card is already face-up in your Spell & Trap Zone: Destroy that opponent's monster. That Xyz Monster must have 2 or more materials attached to activate and to resolve this effect.
   de: |-
     Offene Xyz-Monster mit 2 oder mehr Xyz-Material auf dem Spielfeld können nicht durch Karteneffekte zerstört werden. Nach der Schadensberechnung, falls ein Xyz-Monster, das du kontrollierst, gegen ein Monster deines Gegners kämpft: Zerstöre das Monster deines Gegners. An das Xyz-Monster müssen 2 oder mehr Xyz-Material angehängt sein, um diesen Effekt zu aktivieren und aufzulösen.
   es: |-
@@ -40,7 +40,7 @@ series:
 - Xyz
 images:
 - index: 1
-  image: XyzTribalrivals-CBLZ-EN-C-1E.png
+  image: XyzTribalrivals-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: CBLZ-EN077
