--- a/data/cards/37478723.yaml
+++ b/data/cards/37478723.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 『焰圣剑-杜兰达尔』
 text:
   en: |-
-    While this card is equipped to a monster: You can add 1 Level 5 or lower FIRE Warrior monster from your Deck to your hand, then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 Level 5 or lower FIRE Warrior monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of the turn, except Warrior monsters. You can only use 1 ""Infernoble Arms - Durendal"" effect per turn, and only once that turn.
+    While this card is equipped to a monster: You can add 1 Level 5 or lower FIRE Warrior monster from your Deck to your hand, then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 Level 5 or lower FIRE Warrior monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Warrior monsters. You can only use 1 ""Infernoble Arms - Durendal"" effect per turn, and only once that turn.
   de: |-
     Solange diese Karte ein Monster ausrüstet: Du kannst deiner Hand 1 FEUER Krieger-Monster der Stufe 5 oder niedriger von deinem Deck hinzufügen, dann zerstöre diese Karte. Falls diese Karte auf den Friedhof gelegt wird, weil das ausgerüstete Monster auf den Friedhof gelegt wird: Du kannst 1 FEUER Krieger-Monster der Stufe 5 oder niedriger in deinem Friedhof wählen; beschwöre es als Spezialbeschwörung, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung beschwören, außer Krieger-Monstern. Du kannst nur 1 Effekt von „„Flammedle Waffen - Durendal““ pro Spielzug verwenden und in dem Spielzug nur einmal.
   es: |-
@@ -41,7 +41,7 @@ series:
 - Noble Arms
 images:
 - index: 1
-  image: InfernobleArmsDurendal-MP21-EN-SR-1E.png
+  image: InfernobleArmsDurendal-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: ROTD-EN053
