--- a/data/cards/52105192.yaml
+++ b/data/cards/52105192.yaml
@@ -39,7 +39,7 @@ series:
 - Hole
 images:
 - index: 1
-  image: HiddenArmory-GRCR-EN-R-1E.png
+  image: HiddenArmory-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: SDWS-EN021
@@ -66,6 +66,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: SDWS-DE021
     set_name: Warriors' Strike Structure Deck
@@ -91,6 +92,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: SDWS-FR021
     set_name: Warriors' Strike Structure Deck
@@ -116,6 +118,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: SDWS-IT021
     set_name: Warriors' Strike Structure Deck
@@ -141,6 +144,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: AP01-PT012
     set_name: Astral Pack One
@@ -158,6 +162,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: ADDR-JP003
     set_name: Academy Duel Disk Osiris Red promotional cards
