--- a/data/cards/78199891.yaml
+++ b/data/cards/78199891.yaml
@@ -41,7 +41,9 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoRivalry-DBAD-JP-C.png
+  image: '  MikankoRivalry-DBAD-JP-C.png'
+- index: '1.1'
+  image: MikankoRivalry-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN036
