--- a/data/cards/81260679.yaml
+++ b/data/cards/81260679.yaml
@@ -47,7 +47,10 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: OhimetheManifestedMikanko-DBAD-JP-UR.png
+  image: '  OhimetheManifestedMikanko-DBAD-JP-UR.png   '
+  illustration: OhimetheManifestedMikanko-OW.png
+- index: '1.1'
+  image: OhimetheManifestedMikanko-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN027
