--- a/data/cards/30765615.yaml
+++ b/data/cards/30765615.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>百檎<rt>ひゃっきん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>－リンゴヴルム
+  ja: <ruby>百檎<rt>ひゃっきん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>－リンゴブルム
   ja_romaji: Hyakkinryū - Ringovurumu
   ko:
   ko_rr:
