--- a/data/cards/30765615.yaml
+++ b/data/cards/30765615.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>百檎<rt>ひゃっきん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>－リンゴブルム
-  ja_romaji: Hyakkinryū - Ringovurumu
+  ja_romaji: Hyakkinryū - Ringoburumu
   ko:
   ko_rr:
   zh-TW:
