--- a/data/rush/17688.yaml
+++ b/data/rush/17688.yaml
@@ -1,6 +1,6 @@
 konami_id: 17688
 name:
-  en: Dian Keto the Kitchen Master
+  en: Dian Keto the Cooking Master
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2500
 def: 1000
 images:
 - index: 1
-  image: DianKetotheKitchenMaster-RDMRP1-JP-SR.png
+  image: DianKetotheCookingMaster-RDMRP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP052
