--- a/data/rush/17692.yaml
+++ b/data/rush/17692.yaml
@@ -1,6 +1,6 @@
 konami_id: 17692
 name:
-  en: Frenzied Panna Cotta
+  en: Frenzied Panda Cotta
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1200
 def: 0
 images:
 - index: 1
-  image: FrenziedPannaCotta-RDMRP1-JP-C.png
+  image: FrenziedPandaCotta-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP059
