--- a/data/rush/17693.yaml
+++ b/data/rush/17693.yaml
@@ -1,6 +1,6 @@
 konami_id: 17693
 name:
-  en: Coconut Changel of Heart
+  en: Change of Dessert
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 100
 def: 0
 images:
 - index: 1
-  image: CoconutChangelofHeart-RDMRP1-JP-C.png
+  image: ChangeofDessert-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP061
