--- a/data/rush/17695.yaml
+++ b/data/rush/17695.yaml
@@ -1,6 +1,6 @@
 konami_id: 17695
 name:
-  en: Bubblyman Shock!
+  en: Bubbleburst Shock!
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Bubble Era
 images:
 - index: 1
-  image: BubblymanShock-RDMRP1-JP-R.png
+  image: BubbleburstShock-RDMRP1-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP1-JP065
