--- a/data/rush/17696.yaml
+++ b/data/rush/17696.yaml
@@ -1,6 +1,6 @@
 konami_id: 17696
 name:
-  en: Excitagain
+  en: Party Up
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: Excitagain-RDMRP1-JP-C.png
+  image: PartyUp-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP067
