--- a/data/cards/43331750.yaml
+++ b/data/cards/43331750.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 "Polymerization" Normal or Quick-Play Spell or 1 "Fusion" Normal or Quick-Play Spell in either GY; banish it, and if you do, apply that Spell's effect when that card is activated. You can only activate 1 "Fusion Reproduction" per turn.
+    Target 1 "Polymerization" Normal or Quick-Play Spell or 1 "Fusion" Normal or Quick-Play Spell in either GY; banish it, then apply that Spell's effect when that card is activated. You can only activate 1 "Fusion Reproduction" per turn.
   de:
   es:
   fr:
