--- a/data/rush/yugipedia928559.yaml
+++ b/data/rush/yugipedia928559.yaml
@@ -12,8 +12,21 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-text:
-  en:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 face-up LIGHT Attribute Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you have "Transamu Rainac" face-up on your field, you can change the battle position of 1 face-up monster on your opponent's field.
   de:
   es:
   fr:
