--- a/data/cards/48832775.yaml
+++ b/data/cards/48832775.yaml
@@ -56,7 +56,11 @@ series:
 - Dinomorphia
 images:
 - index: 1
+  image: '  DinomorphiaKentregina-BACH-JP-UR.png   '
+  illustration: DinomorphiaKentregina-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DinomorphiaKentregina-BACH-EN-UR-1E.png
+  illustration: DinomorphiaKentregina-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: BACH-EN038
