--- a/data/cards/21223277.yaml
+++ b/data/cards/21223277.yaml
@@ -56,7 +56,11 @@ series:
 - Noble Knight
 images:
 - index: 1
+  image: '  ArtorigusKingoftheNobleKnights-LVP1-JP-R.png     '
+  illustration: ArtorigusKingoftheNobleKnights-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ArtorigusKingoftheNobleKnights-NKRT-EN-PlR-LE.png
+  illustration: ArtorigusKingoftheNobleKnights-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CBLZ-EN086
