--- a/data/cards/52020510.yaml
+++ b/data/cards/52020510.yaml
@@ -41,7 +41,11 @@ series:
 - Dinomorphia
 images:
 - index: 1
+  image: '  DinomorphiaAlert-BACH-JP-C.png   '
+  illustration: DinomorphiaAlert-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DinomorphiaAlert-BACH-EN-C-1E.png
+  illustration: DinomorphiaAlert-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: BACH-EN069
