--- a/data/cards/54936498.yaml
+++ b/data/cards/54936498.yaml
@@ -40,7 +40,11 @@ atk: 300
 def: 900
 images:
 - index: 1
+  image: '  InfluenceDragon-TF06-JP-UR.jpg  '
+  illustration: InfluenceDragon-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: InfluenceDragon-GAOV-EN-C-1E.png
+  illustration: InfluenceDragon-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: GAOV-EN093
