--- a/data/cards/92133240.yaml
+++ b/data/cards/92133240.yaml
@@ -45,7 +45,11 @@ series:
 - Dinomorphia
 images:
 - index: 1
+  image: '  DinomorphiaTherizia-BACH-JP-SR.png    '
+  illustration: DinomorphiaTherizia-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DinomorphiaTherizia-BACH-EN-ScR-1E.png
+  illustration: DinomorphiaTherizia-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: BACH-EN009
