--- a/data/rush/yugipedia921329.yaml
+++ b/data/rush/yugipedia921329.yaml
@@ -74,10 +74,11 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: FiveHeadedDragon-OW-3.png
+  image: FiveHeadedDragon-RDLGP1-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP0??
+  - set_number: RD/LGP1-JP001
     set_name: Legend Awakening Pack
     rarities:
+    - Ultra Rare
 yugipedia_page_id: 921329
