--- a/rush.yaml
+++ b/rush.yaml
@@ -45598,6 +45598,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Fusion
 images:
 - index: 1
   image: Fusion-RDMRP1-JP-C.png
@@ -87337,6 +87339,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
+- Fusion
 - The
 images:
 - index: 1
@@ -89573,6 +89576,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Fusion
 images:
 - index: 1
   image: DragonTribeFusion-RDLGP1-JP-OP.png
