--- a/data/cards/86395581.yaml
+++ b/data/cards/86395581.yaml
@@ -110,6 +110,15 @@ sets:
     set_name: Premium Pack 2021
     rarities:
     - Secret Rare
+  - set_number: RC04-JP019
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PP15-KR034
     set_name: Premium Pack Vol.15
