--- a/data/cards/16310544.yaml
+++ b/data/cards/16310544.yaml
@@ -95,6 +95,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894435
