--- a/data/cards/16433136.yaml
+++ b/data/cards/16433136.yaml
@@ -41,7 +41,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoPurificationDance-DBAD-JP-C.png
+  image: MikankoPurificationDance-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN031
@@ -81,6 +81,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894426
