--- a/data/cards/17255673.yaml
+++ b/data/cards/17255673.yaml
@@ -41,7 +41,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: HeavenlyGateoftheMikanko-DBAD-JP-C.png
+  image: HeavenlyGateoftheMikanko-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN028
@@ -81,6 +81,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894423
