--- a/data/cards/18377261.yaml
+++ b/data/cards/18377261.yaml
@@ -45,7 +45,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: HaRetheSwordMikanko-DBAD-JP-SR.png
+  image: HaRetheSwordMikanko-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: AMDE-EN025
@@ -88,6 +88,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894420
