--- a/data/cards/25550531.yaml
+++ b/data/cards/25550531.yaml
@@ -44,7 +44,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: Purrely-DBAD-JP-C.png
+  image: Purrely-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN013
@@ -89,6 +89,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894366
