--- a/data/cards/26372118.yaml
+++ b/data/cards/26372118.yaml
@@ -46,7 +46,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: ALERT-DBAD-JP-C.png
+  image: ALERT-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN010
@@ -86,6 +86,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888857
