--- a/data/cards/29599813.yaml
+++ b/data/cards/29599813.yaml
@@ -60,33 +60,38 @@ series:
 - Purrely
 images:
 - index: 1
-  image: PurrelyPrettyMemory-DBAD-JP-C.png
+  image: PurrelyPrettyMemory-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: AMDE-DE022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: AMDE-FR022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: AMDE-IT022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: AMDE-PT022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP022
     set_name: 'Deck Build Pack: Amazing Defenders'
@@ -100,6 +105,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894354
