--- a/data/cards/37495766.yaml
+++ b/data/cards/37495766.yaml
@@ -46,7 +46,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACETurbulence-DBAD-JP-UR.png
+  image: RescueACETurbulence-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN007
@@ -91,6 +91,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888853
