--- a/data/cards/37617348.yaml
+++ b/data/cards/37617348.yaml
@@ -46,7 +46,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEHydrant-DBAD-JP-SR.png
+  image: RescueACEHydrant-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN004
@@ -89,6 +89,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888850
