--- a/data/cards/38339996.yaml
+++ b/data/cards/38339996.yaml
@@ -45,7 +45,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEImpulse-DBAD-JP-SR.png
+  image: RescueACEImpulse-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: AMDE-EN001
@@ -83,6 +83,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888848
