--- a/data/cards/42705243.yaml
+++ b/data/cards/42705243.yaml
@@ -40,7 +40,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoPromise-DBAD-JP-C.png
+  image: MikankoPromise-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN035
@@ -80,6 +80,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894436
