--- a/data/cards/43527730.yaml
+++ b/data/cards/43527730.yaml
@@ -41,7 +41,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoWaterArabesque-DBAD-JP-SR.png
+  image: MikankoWaterArabesque-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN032
@@ -79,6 +79,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 895259
