--- a/data/cards/51822687.yaml
+++ b/data/cards/51822687.yaml
@@ -54,7 +54,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: ExpurrelyHappiness-DBAD-JP-UR.png
+  image: ExpurrelyHappiness-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: AMDE-EN017
@@ -99,6 +99,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 893673
