--- a/data/cards/52645235.yaml
+++ b/data/cards/52645235.yaml
@@ -53,7 +53,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: EpurrelyHappiness-DBAD-JP-C.png
+  image: EpurrelyHappiness-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN014
@@ -93,6 +93,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894347
