--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -60,7 +60,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: PurrelyDeliciousMemory-DBAD-JP-C.png
+  image: PurrelyDeliciousMemory-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN023
@@ -100,6 +100,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894355
