--- a/data/cards/56700100.yaml
+++ b/data/cards/56700100.yaml
@@ -41,7 +41,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: MyFriendPurrely-DBAD-JP-SR.png
+  image: MyFriendPurrely-AMDE-EN-UR-1E.png
 sets:
   en:
   - set_number: AMDE-EN020
@@ -84,6 +84,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894362
