--- a/data/cards/63899465.yaml
+++ b/data/cards/63899465.yaml
@@ -41,7 +41,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEHQ-DBAD-JP-C.png
+  image: RescueACEHQ-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN008
@@ -81,6 +81,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888854
