--- a/data/cards/65734501.yaml
+++ b/data/cards/65734501.yaml
@@ -45,7 +45,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEAirLifter-DBAD-JP-C.png
+  image: RescueACEAirLifter-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN002
@@ -85,6 +85,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888849
