--- a/data/cards/76922029.yaml
+++ b/data/cards/76922029.yaml
@@ -95,6 +95,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LART-EN044
+    set_name: The Lost Art Promotion 2023 A
+    rarities:
+    - Ultra Rare
   - set_number: PGD-029
     set_name: Pharaonic Guardian
     rarities:
@@ -150,15 +154,15 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Ultra Rare
-  - set_number: LART-FR044
-    set_name: The Lost Art Promotion 2022 B
-    rarities:
-    - Ultra Rare
   - set_number: SGX1-FRI04
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
     - Secret Rare
+  - set_number: LART-FR044
+    set_name: The Lost Art Promotion 2023 A
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DB2-IT228
     set_name: Dark Beginning 2
@@ -192,10 +196,6 @@ sets:
   pt:
   - set_number: SBTK-PT016
     set_name: 'Speed Duel: Trials of the Kingdom'
-    rarities:
-    - Ultra Rare
-  - set_number: LART-PT044
-    set_name: The Lost Art Promotion 2022 B
     rarities:
     - Ultra Rare
   - set_number: SGX1-PTI04
