--- a/data/cards/78199891.yaml
+++ b/data/cards/78199891.yaml
@@ -83,6 +83,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894437
