--- a/data/cards/79912449.yaml
+++ b/data/cards/79912449.yaml
@@ -43,7 +43,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoReflectionRondo-DBAD-JP-C.png
+  image: MikankoReflectionRondo-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN033
@@ -88,6 +88,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894427
