--- a/data/cards/80044027.yaml
+++ b/data/cards/80044027.yaml
@@ -41,7 +41,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoFireDance-DBAD-JP-SR.png
+  image: MikankoFireDance-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: AMDE-EN030
@@ -79,6 +79,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894425
