--- a/data/cards/82105704.yaml
+++ b/data/cards/82105704.yaml
@@ -60,7 +60,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: PurrelyHappyMemory-DBAD-JP-C.png
+  image: PurrelyHappyMemory-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN021
@@ -100,6 +100,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894358
