--- a/data/cards/82983267.yaml
+++ b/data/cards/82983267.yaml
@@ -41,7 +41,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: Purrelyeap-DBAD-JP-C.png
+  image: Purrelyeap-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN024
@@ -81,6 +81,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894364
