--- a/data/cards/83827392.yaml
+++ b/data/cards/83827392.yaml
@@ -54,7 +54,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: ExpurrelyNoir-DBAD-JP-SR.png
+  image: ExpurrelyNoir-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: AMDE-EN018
@@ -97,6 +97,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 895057
