--- a/data/cards/98049934.yaml
+++ b/data/cards/98049934.yaml
@@ -53,7 +53,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: EpurrelyBeauty-DBAD-JP-SR.png
+  image: EpurrelyBeauty-AMDE-EN-SR-1E.png
 sets:
   en:
   - set_number: AMDE-EN015
@@ -91,6 +91,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 894348
