--- a/data/cards/99162522.yaml
+++ b/data/cards/99162522.yaml
@@ -46,7 +46,7 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: EXTINGUISH-DBAD-JP-C.png
+  image: EXTINGUISH-AMDE-EN-R-1E.png
 sets:
   en:
   - set_number: AMDE-EN012
@@ -86,6 +86,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 888860
