--- a/data/cards/34267821.yaml
+++ b/data/cards/34267821.yaml
@@ -43,7 +43,11 @@ series:
 - Artifact
 images:
 - index: 1
+  image: '  ArtifactLancea-SR12-JP-NPR.png   '
+  illustration: ArtifactLancea-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ArtifactLancea-MAGO-EN-PGR-1E.png
+  illustration: ArtifactLancea-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DUEA-EN034
