--- a/data/cards/84268896.yaml
+++ b/data/cards/84268896.yaml
@@ -43,7 +43,11 @@ series:
 - Artifact
 images:
 - index: 1
+  image: '  ArtifactCaduceus-PRIO-JP-SR.png  '
+  illustration: ArtifactCaduceus-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ArtifactCaduceus-MP15-EN-R-1E.png
+  illustration: ArtifactCaduceus-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PRIO-EN017
