--- a/data/rush/17542.yaml
+++ b/data/rush/17542.yaml
@@ -1,6 +1,6 @@
 konami_id: 17542
 name:
-  en: Mask of Good Omens
+  en: Lucky Mask of Omens
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: MaskofGoodOmens-RDKP09-JP-C.png
+  image: LuckyMaskofOmens-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP056
