--- a/data/rush/17532.yaml
+++ b/data/rush/17532.yaml
@@ -1,6 +1,6 @@
 konami_id: 17532
 name:
-  en: Secret Sword Technique! Refined Ruler Render
+  en: Sword Skill - Ruler's Slash
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SecretSwordTechniqueRefinedRulerRender-RDKP09-JP-SR.png
+  image: SwordSkillRulersSlash-RDKP09-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP09-JP046
