--- a/data/rush/17590.yaml
+++ b/data/rush/17590.yaml
@@ -1,6 +1,6 @@
 konami_id: 17590
 name:
-  en: Fire Sorcerer
+  en: Flare Sorcerer
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: FireSorcerer-RDGRD2-JP-C.png
+  image: FlareSorcerer-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/GRD2-JP012
