--- a/data/rush/17683.yaml
+++ b/data/rush/17683.yaml
@@ -1,6 +1,6 @@
 konami_id: 17683
 name:
-  en: A.I. Bear Can
+  en: Ice Pop Bear
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: AIBearCan-RDMRP1-JP-R.png
+  image: IcePopBear-RDMRP1-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP1-JP037
