--- a/data/rush/yugipedia921267.yaml
+++ b/data/rush/yugipedia921267.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>銀眼の星猫<rt>シルバーアイズ・スターキャット</rt></ruby>
-  ja_romaji: Shirubāaizu Sutā Kyatto
+  ja_romaji: Shirubāaizu Sutākyatto
   ko:
   ko_rr:
   zh-TW:
