--- a/data/rush/yugipedia928873.yaml
+++ b/data/rush/yugipedia928873.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>極<rt>ぎょく</rt></ruby><ruby>奏<rt>そう</rt></ruby>のマッハヴァイオ
-  ja_romaji: Gyokusō no Mahhavaio
+  ja: <ruby>極<rt>きょく</rt></ruby><ruby>奏<rt>そう</rt></ruby>のマッハヴァイオ
+  ja_romaji: Kyokusō no Mahhavaio
   ko:
   ko_rr:
   zh-TW:
