--- a/data/rush/17021.yaml
+++ b/data/rush/17021.yaml
@@ -1,6 +1,6 @@
 konami_id: 17021
 name:
-  en: Comeback! Feelshock!!
+  en: Shocking Comeback!!
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: ComebackFeelshock-RDKP07-JP-R.png
+  image: ShockingComeback-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP056
