--- a/rush.yaml
+++ b/rush.yaml
@@ -49917,7 +49917,7 @@ yugipedia_page_id: 835783
 ---
 konami_id: 17021
 name:
-  en: Comeback! Feelshock!!
+  en: Shocking Comeback!!
   de:
   es:
   fr:
@@ -49961,7 +49961,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: ComebackFeelshock-RDKP07-JP-R.png
+  image: ShockingComeback-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP056
@@ -65728,7 +65728,7 @@ yugipedia_page_id: 874484
 ---
 konami_id: 17679
 name:
-  en: Princess Omega the Supreme Shining Superstar
+  en: Princess Omega the Shining Megastar
   de:
   es:
   fr:
@@ -65795,7 +65795,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: PrincessOmegatheSupremeShiningSuperstar-RDMRP1-JP-SR.png
+  image: PrincessOmegatheShiningMegastar-RDMRP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP025
@@ -66023,7 +66023,7 @@ yugipedia_page_id: 881813
 ---
 konami_id: 17683
 name:
-  en: A.I. Bear Can
+  en: Ice Pop Bear
   de:
   es:
   fr:
@@ -66073,7 +66073,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: AIBearCan-RDMRP1-JP-R.png
+  image: IcePopBear-RDMRP1-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP1-JP037
@@ -86599,7 +86599,7 @@ name:
   it:
   pt:
   ja: <ruby>銀眼の星猫<rt>シルバーアイズ・スターキャット</rt></ruby>
-  ja_romaji: Shirubāaizu Sutā Kyatto
+  ja_romaji: Shirubāaizu Sutākyatto
   ko:
   ko_rr:
   zh-TW:
@@ -88683,8 +88683,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>極<rt>ぎょく</rt></ruby><ruby>奏<rt>そう</rt></ruby>のマッハヴァイオ
-  ja_romaji: Gyokusō no Mahhavaio
+  ja: <ruby>極<rt>きょく</rt></ruby><ruby>奏<rt>そう</rt></ruby>のマッハヴァイオ
+  ja_romaji: Kyokusō no Mahhavaio
   ko:
   ko_rr:
   zh-TW:
